--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "hai-server": "^0.0.4"
+    "hai-server": "^0.0.4",
+    "lite-server": "^2.6.1"
   }
 }
